# parliment

./: .gitignore  AUTHORS  ChangeLog  Dockerfile  Pipfile  README.md  __init__.py  app.ini  app.py  commons.db  data_exploration.py  endpoints.py  first_build.py  get_divisions.py  kmodes.py  make_db.py  mapped_classes.py  output_notebook  pyproject.toml  requirements.txt  setup.cfg  start.sh  start_db.py  style.css  tests.py  twfy.py
_posts/2019/: 2019-04-18-resiland_email.markdown
commons/: __init__.py  commons.db  dashboard.py  data_exploration.py  db.py  fetch_data.py  get_divisions.py  graphics.py  kmodes.py  mapped_classes.py  populate_db.py  tests.py  twfy.py
commons/data/: 307  308  309  311  313  315  318  319  321  324  326  327  328  330  332  335  341  342  345  346  347  348  349  351  354  355  357  360  366  375  380  381  382  386  387  391  396  410  412
data/: 310  312  314  316  317  320  322  323  325  329  331  333  334  336  337  338  339  340  343  344  350  352  353  356  358  359  361  362  363  364  365  367  368  369  370  371  372  373  374  376  (+16 more)
web-app/: commons-vis.js  flare.json  index.html  main.js  mp_clusters.json
